syntax = "proto3";

package kivsee.proto;

message Pixel {
    uint32 index = 1;
    float rel_pos = 2;
}

/*
a single segment with a unique name that identifies it, 
and the pixels that define the segment.
*/
message Segment {
    string name = 1;
    repeated Pixel pixels = 2;
}

/*
This message describes all the segments in a single controller.
They all share a single buffer with number_of_pixels pixels,
indexed from 0, 1, ..., number_of_pixels - 1
*/
message ThingSegments {
    fixed32 guid = 1;
    uint32 number_of_pixels = 2;
    repeated Segment segments = 3;
}